# py-laba4

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: casino.py  casino_balance.py  chip.py  constants.py  goose.py  goose_collections.py  goose_income.py  goose_ocg.py  goose_ocg_collection.py  main.py  player.py  player_collection.py  simulation.py
tests/: test_casino_balance.py  test_goose.py  test_goose_collection.py  test_goose_income.py  test_goose_ocg.py  test_goose_ocg_collection.py  test_player.py  test_player_collection.py
