[project]
name = "py-laba4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "typer>=0.20.0",
]


testpaths = ["tests"]
pythonpath = ["."]


[tool.ruff]
src = ["src", "tests"]
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "A"]
lint.ignore = ["F821", "A002", "B904"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
